vlib/v/checker/tests/with_check_option/v_import_const.vv
import qbe.low { Add, Call, DConst, DStr, DataItem, Instr, Param, Ret, Type, const, global, temporary }
import qbe.high { DataDef, DataDefItem, Function, Linkage, Module }

fn abc() {
}
